<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_background_gray"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <include layout="@layout/top_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/order_detail_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <ImageView
                android:id="@+id/iv_top_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/red" />

            <TextView
                android:id="@+id/tv_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/message_order_title"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <!-- 订单状态 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/topbox"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_state"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_order_detial_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_state"
                android:textColor="@color/red"
                android:textSize="15sp" />
        </LinearLayout>

        <!-- 订单编号 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/topbox"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_order_detial_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_number"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- 订单数量 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/topbox"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_count"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_order_detial_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_count"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- 支付时间 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/topbox"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_pay_time"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_order_detial_pay_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_pay_time"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- 订单价格 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/topbox"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_price"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_order_detial_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_price"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- 电话号码 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/topbox"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_phone"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_order_detial_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_price"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
        <!-- 商品简介 -->

        <LinearLayout
            android:padding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/topbox"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_introduction"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_order_detial_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/order_detail_introduction"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>